# graphql-embedding-model

./: .gitignore  Makefile  README.md  pyproject.toml  setup.txt
docs/: training-results.md
examples/: curated_realism_eval.template.jsonl  pipeline_config.prod.yaml  pipeline_config.yaml  schema.graphql  use_dataset.py  use_model.py
graphql_finetuning_pipeline/cli/: main.py
graphql_finetuning_pipeline/data/: adversarial_mining.py  corpus.py  corpus_backfill.py  dataset_builder.py  models.py  openai_seed.py  real_schemas.py  schema_ingest.py  schema_worlds.py  structural_views.py  synthetic.py
graphql_finetuning_pipeline/deploy/: ollama_export.py
graphql_finetuning_pipeline/eval/: benchmark.py  curated_benchmark.py  metrics.py  plots.py  retrieval_eval.py
graphql_finetuning_pipeline/retrieval/: hard_negatives.py  index.py
graphql_finetuning_pipeline/training/: epoch_eval.py  train_embedder.py
graphql_finetuning_pipeline/utils/: embeddings.py  io.py
schemas/real/: README.md
tests/: test_benchmark.py  test_corpus.py  test_dataset_builder.py  test_metrics.py  test_openai_seed.py  test_plots.py  test_retrieval_views.py  test_schema_ingest.py  test_structural_views.py  test_synthetic.py  test_training_pipeline.py
tools/: demo_example.py  demo_ladder.py  demo_visualize.py  find_examples.py  find_examples_v2.py  plot_eval.py  remine_seed.py
